# pycocoedit

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  release-test.yml  release.yml  test.yml
api/: index.html
api/imagecaptioning/: index.html
api/keypointdetection/: index.html
api/objectdetection/: index.html
api/panopticsegmentation/: index.html
develop/release_manual/: index.html
docs/: api.md  index.md
docs/api/: imagecaptioning.md  keypointdetection.md  objectdetection.md  panopticsegmentation.md
docs/api/objectdetection/: data.md  filter.md
docs/develop/: release_manual.md
pycocoedit/: cocodata.py  filter.py
pycocoedit/objectdetection/: data.py  filter.py
search/: search_index.json
stylesheets/: custom.css
tests/: test_ci.py  test_version.py
tests/pycocoedit/: test_cocodata.py  test_filter.py
tests/pycocoedit/objectdetection/: test_data.py  test_data__apply_filter.py  test_filter.py
