[tool.poetry]
name = "pycocoedit"
version = "0.0.1"
description = "Advanced editing tools for COCO dataset annotations"
authors = ["Nao-Y1996 <60519909+Nao-Y1996@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["COCO", "annotation", "dataset", "filter", "computer vision"]

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.10"
strict = false                 # 必要に応じて true へ
allow_redefinition = true
ignore_missing_imports = true

#[tool.poetry.include]
#LICENSE = { path = "LICENSE" }

[tool.poetry.urls]
homepage = "https://github.com/Nao-Y1996/pycocoedit"
repository = "https://github.com/Nao-Y1996/pycocoedit"
"Bug Tracker" = "https://github.com/Nao-Y1996/pycocoedit/issues"